--- a/load.Rmd
+++ b/load.Rmd
@@ -41,6 +41,7 @@ pct_privatedata <- file.path("..", "pct-privatedata")
 if(!file.exists(pct_data)) stop(paste("The pct-data repository has cannot be found.  Please clone https://github.com/npct/pct-data in", dirname(getwd())))
 if(!file.exists(pct_bigdata)) stop(paste("The pct-bigdata repository has cannot be found.  Please clone https://github.com/npct/pct-bigdata in", dirname(getwd())))
 if(!file.exists(pct_privatedata)) warning(paste("The pct_privatedata repository has cannot be found in", dirname(getwd())))
+cyclestreet_pat() # Check user has cyclestreets API key
 ```
 
 
