Refactor simplification code
Requires up-to-date version of stplanr

--- a/load.Rmd
+++ b/load.Rmd
@@ -621,18 +621,11 @@ if(length(rft) == length(rf)){
 } else print("Error: toptailed lines do not match lines")
 rft$base_olc <- l$base_olc
 
-# simplify line geometries
-shapefile(rft, "rft", overwrite = T)
-mapshape("rft.shp", percent = 5)
-if(file.exists("rft-ms.shp")){
-  rft2 <- shapefile("rft-ms.shp")
-  f_remove <- list.files(pattern = "rft")
-  file.remove(f_remove)
-  rft2@data <- rft@data
-  rft <- rft2
-  rm(rft2)
-}
+# Simplify line geometries (if mapshaper is available)
+if(mapshape_available())
+  rft <- mapshape(rft, percent = 5)
 rnet <- overline(rft, "base_olc")
+object.size(rnet)
 # test the resulting plot
 plot(rnet, lwd = rnet$base_olc / mean(rnet$base_olc))
 for(i in scens){
